--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Bootstrap Boilerplate Template">
+    <meta name="description" content="Conflux template">
     <meta name="author" content="Bronson Dunbar">
 
     <link rel="apple-touch-icon" sizes="57x57" href="assets/ico/apple-icon-57x57.png">
@@ -26,7 +26,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Conflux</title>
+    <title>Conflux template</title>
 
     <link href="css/style.css" rel="stylesheet">
 
@@ -38,7 +38,7 @@
   </head>
 
   <body id="wrapper">
-
+    
     <canvas id="canvas"></canvas>
 
     <nav class="navbar navbar-default navbar-fixed-top">
