--- a/source/index.html
+++ b/source/index.html
@@ -57,8 +57,13 @@
       </div>
     </nav>
 
-    <div class="container">
-      <img src="assets/svg/brand.svg" class="brand" />
+    <div class="container">      
+      <header>
+        <img src="assets/svg/brand.svg" class="brand" />
+
+        <h1>Conflux</h1>
+        <span class="tagline"></span>
+      </header>
 
       <div class="search">
         <i class="fa fa-search" aria-hidden="true"></i>
