--- a/source/article.html
+++ b/source/article.html
@@ -61,7 +61,16 @@
       <div class="article">
         <header>
           <h1>Consectetur adipiscing elit</h1>
+          <p>consectetur | adipiscing | elit</p>
         </header>
+
+        <aside>
+          <img src="assets/imgs/placeholders/image-4x3.png" class="img-responsive" />
+
+          <h3>Consectetur adipiscing</h3>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras odio mi, viverra et elementum in, efficitur vehicula ipsum. Praesent venenatis ex venenatis lacus posuere elementum et et tortor. Mauris at sem orci.</p>
+        </aside>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras odio mi, viverra et elementum in, efficitur vehicula ipsum. Praesent venenatis ex venenatis lacus posuere elementum et et tortor. Mauris at sem orci. Phasellus eget fermentum justo. Pellentesque sit amet urna orci. Phasellus sit amet euismod nulla, at ullamcorper turpis. Donec ac pulvinar nulla. Ut vulputate ante vel tristique rhoncus. Mauris ac erat velit. Sed ornare sem rhoncus nulla tristique tempus. Pellentesque commodo ipsum et dolor posuere, quis eleifend augue pretium. Aliquam convallis pharetra tincidunt. In posuere et odio ac suscipit. Suspendisse sagittis vehicula lacus, sit amet iaculis est placerat quis. Donec volutpat velit diam, at dignissim ex lobortis a. Vestibulum molestie vel mauris vel aliquet.</p>
 
