--- a/source/article.html
+++ b/source/article.html
@@ -45,19 +45,26 @@
       <div class="container-fluid">
         <div id="navbar">
           <ul class="nav navbar-nav">
-            <li><a href="#">Support</a></li>
+            <li><a href="#">Link 1</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#" class="btn btn-default">Sign in</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#" class="btn btn-default">Link 4</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
     <div class="container">
+      <header>
+        <a href="index.html"><img src="assets/svg/brand.svg" class="brand" /></a>
+
+        <h1>Conflux</h1>
+        <span class="tagline"></span>
+      </header>
+
       <div class="article">
         <header>
           <h1>Consectetur adipiscing elit</h1>
@@ -89,13 +96,13 @@
     <footer class="footer">
       <div class="container">
         <ul>
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Honor Code</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Cookie Policy</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Link 3</a></li>
+          <li><a href="#">Link 4</a></li>
         </ul>
 
-        <p>Built by Proversity | Powered by Open edX.</p>
+        <p>&copy; Bronson Dunbar</p>
       </div>
     </footer>
 
