--- a/source/index.html
+++ b/source/index.html
@@ -45,13 +45,13 @@
       <div class="container-fluid">
         <div id="navbar">
           <ul class="nav navbar-nav">
-            <li><a href="#">Support</a></li>
+            <li><a href="#">Link 1</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#" class="btn btn-default">Sign in</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#" class="btn btn-default">Link 4</a></li>
           </ul>
         </div>
       </div>
@@ -59,7 +59,7 @@
 
     <div class="container">      
       <header>
-        <img src="assets/svg/brand.svg" class="brand" />
+        <a href="index.html"><img src="assets/svg/brand.svg" class="brand" /></a>
 
         <h1>Conflux</h1>
         <span class="tagline"></span>
@@ -115,19 +115,19 @@
     <section>
       <div class="container">
         <div class="col-md-6 col-sm-12">
-          <h3>About us</h3>
+          <h3>Morbi eget</h3>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id aliquet turpis, at tincidunt est. Donec semper cursus orci euismod ornare. Nunc in ullamcorper lectus. Nulla nisi velit, facilisis a nunc vel, volutpat dignissim sem. Morbi eget lacus semper dui aliquam aliquet sit amet in turpis. Fusce est lorem, tempor id ultrices et, rutrum sit amet nibh. Phasellus quis nibh enim. Praesent pretium purus id gravida accumsan.</p>
         </div>
 
         <div class="col-md-6 col-sm-12">
-          <h3>Latest news</h3>
+          <h3>Donec semper cursus</h3>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id aliquet turpis, at tincidunt est. Donec semper cursus orci euismod ornare. Nunc in ullamcorper lectus. Nulla nisi velit, facilisis a nunc vel, volutpat dignissim sem. Morbi eget lacus semper dui aliquam aliquet sit amet in turpis. Fusce est lorem, tempor id ultrices et, rutrum sit amet nibh. Phasellus quis nibh enim. Praesent pretium purus id gravida accumsan.</p>
         </div>
         
         <div class="col-md-12 col-sm-12">
-          <h3>Contact us</h3>
+          <h3>Fusce est</h3>
 
           <form>
             <label>Name:</label>
@@ -139,7 +139,7 @@
             <label>Message:</label>
             <textarea></textarea>
 
-            <a href="#" class="btn btn-default">Send</a>
+            <a href="#" class="btn btn-lg btn-default">Nunc in ullamcorper</a>
           </form>
         </div>
 
@@ -154,13 +154,13 @@
     <footer class="footer">
       <div class="container">
         <ul>
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Honor Code</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Cookie Policy</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Link 3</a></li>
+          <li><a href="#">Link 4</a></li>
         </ul>
 
-        <p>Built by Proversity | Powered by Open edX.</p>
+        <p>&copy; Bronson Dunbar</p>
       </div>
     </footer>
 
