--- a/source/article.html
+++ b/source/article.html
@@ -68,7 +68,11 @@
       <div class="article">
         <header>
           <h1>Consectetur adipiscing elit</h1>
-          <p>consectetur | adipiscing | elit</p>
+          <ul>
+            <li>consectetur</li>
+            <li>adipiscing</li>
+            <li>elit</li>
+          </ul>
         </header>
 
         <aside>
