--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <div class="container-fluid">
         <div id="navbar">
           <ul class="nav navbar-nav">
-            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Donec</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#" class="btn btn-default">Link 4</a></li>
+            <li><a href="#">Adipiscing</a></li>
+            <li><a href="#">Turpis</a></li>
+            <li><a href="#" class="btn btn-default">Amet</a></li>
           </ul>
         </div>
       </div>
@@ -152,10 +152,10 @@
     <footer class="footer">
       <div class="container">
         <ul>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
+          <li><a href="#">Adipiscing</a></li>
+          <li><a href="#">Turpis</a></li>
+          <li><a href="#">Amet</a></li>
+          <li><a href="#">Accumsan</a></li>
         </ul>
 
         <p>&copy; Bronson Dunbar</p>
